# goit-py_web-hw-05

./: app.py  index.html  pyproject.toml  test_command.txt  websocket_server.py
